# product-stalker

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LOCAL_TS_COMPARISON.md  README.md  biome.json  bts.jsonc  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/desktop/src-tauri/crates/core/: Cargo.toml
apps/desktop/src-tauri/crates/core/src/: error.rs  lib.rs  test_utils.rs
apps/desktop/src-tauri/crates/core/src/db/: connection.rs  mod.rs
apps/desktop/src-tauri/crates/core/src/entities/: app_setting.rs  exchange_rate.rs  mod.rs  prelude.rs  verified_session.rs
apps/desktop/src-tauri/crates/core/src/migrations/: m20240104_000001_add_background_check_settings.rs  m20250206_000001_create_app_settings_table.rs  m20250207_000001_backfill_app_settings.rs  m20250208_000001_drop_old_settings_table.rs  m20250214_000001_create_verified_sessions.rs  m20260216_000001_create_exchange_rates_table.rs  m20260216_000002_rename_tables_to_plural.rs  migrator.rs  mod.rs
apps/desktop/src-tauri/crates/core/src/repositories/: exchange_rate_repository.rs  mod.rs  settings_helpers.rs  verified_session_repository.rs
apps/desktop/src-tauri/crates/core/src/services/: exchange_rate_service.rs  mod.rs  notification_helpers.rs  setting_service.rs
apps/desktop/src-tauri/crates/domain/: Cargo.toml
apps/desktop/src-tauri/crates/domain/src/: lib.rs  test_utils.rs  utils.rs
apps/desktop/src-tauri/crates/domain/src/entities/: availability_check.rs  mod.rs  prelude.rs  product.rs  product_retailer.rs  retailer.rs
apps/desktop/src-tauri/crates/domain/src/migrations/: m20240101_000001_create_products_table.rs  m20240103_000001_create_availability_checks_table.rs  m20250205_000001_add_price_tracking.rs  m20260211_000001_add_product_currency.rs  m20260212_000001_rename_price_cents_to_price_minor_units.rs  m20260213_000001_add_multi_retailer.rs  m20260214_000001_add_product_sort_order.rs  m20260215_000001_add_retailer_sort_order.rs  m20260216_000002_add_normalized_price_columns.rs  migrator.rs  mod.rs
apps/desktop/src-tauri/crates/domain/src/repositories/: availability_check_repository.rs  mod.rs  product_repository.rs  product_retailer_repository.rs  retailer_repository.rs
apps/desktop/src-tauri/crates/domain/src/services/: availability_service.rs  currency.rs  domain_setting_service.rs  headless_service.rs  manual_verification_service.rs  mod.rs  notification_service.rs  product_retailer_service.rs  product_service.rs
apps/desktop/src-tauri/crates/domain/src/services/availability/: checker.rs  comparison.rs  mod.rs  renormalize.rs  summary.rs  types.rs
apps/desktop/src-tauri/crates/domain/src/services/scraper/: bot_detection.rs  chemist_warehouse.rs  gtm_datalayer.rs  mod.rs  (+5 more)
(+274 files in other folders)
