[package]
name = "product-stalker-core"
version = "0.3.0"
edition = "2021"
description = "Core infrastructure for Product Stalker - reusable database and settings utilities"

[features]
default = []
test-utils = []

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
