[package]
name = "product-stalker-domain"
version = "0.1.0"
edition = "2021"
description = "Product domain logic for Product Stalker - entities, services, and scraping"

[dependencies]
product-stalker-core = { path = "../core" }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "deflate", "brotli"] }
scraper = "0.23"
url = "2"
headless_chrome = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
